--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A networking web application 
+        <meta name="description" content="A networking web application
 that gives people the ability to collaborate with anyone in the world and invest in projects.">
         <meta name="author" content="Collabarray">
         <!-- <link rel="icon" href="img/icon/icon.png"> -->
         <title>Home | Collabarray</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" />
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -29,18 +30,7 @@ that gives people the ability to collaborate with anyone in the world and invest
 
 		<!-- Leave out Storage -->
 		<!-- <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-storage.js"></script> -->
-		<script>
-		  // Initialize Firebase
-		  var config = {
-			apiKey: "AIzaSyCvV09DtCgNoshpAXot5V0dMLeD-Dfhwp8",
-			authDomain: "collabarray-953db.firebaseapp.com",
-			databaseURL: "https://collabarray-953db.firebaseio.com",
-			projectId: "collabarray-953db",
-			storageBucket: "collabarray-953db.appspot.com",
-			messagingSenderId: "978577647128"
-		  };
-		  firebase.initializeApp(config);
-		</script>
+
 		<script src="scripts.js"></script>
 		<style media="screen">
 		  #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
